add_library(Yojimbo_SodiumBuiltin dummy.c)

target_sources(Yojimbo_SodiumBuiltin PRIVATE
    sodium_aead_chacha20poly1305.c
    sodium_aead_xchacha20poly1305.c
    sodium_blake2b-compress-avx2.c
    sodium_blake2b-compress-ref.c
    sodium_blake2b-compress-sse41.c
    sodium_blake2b-compress-ssse3.c
    sodium_blake2b-ref.c
    sodium_box_curve25519xchacha20poly1305.c
    sodium_box_curve25519xsalsa20poly1305.c
    sodium_box_seal_curve25519xchacha20poly1305.c
    sodium_chacha20-ref.c
    sodium_codecs.c
    sodium_core.c
    sodium_core_ed25519.c
    sodium_core_hchacha20.c
    sodium_core_hsalsa20.c
    sodium_core_hsalsa20_ref2.c
    sodium_core_salsa_ref.c
    sodium_crypto_box.c
    sodium_crypto_box_easy.c
    sodium_crypto_generichash.c
    sodium_crypto_kx.c
    sodium_crypto_scalarmult.c
    sodium_crypto_secretbox.c
    sodium_crypto_secretbox_easy.c
    sodium_crypto_sign.c
    sodium_dolbeau_chacha20-avx2.c
    sodium_dolbeau_chacha20-ssse3.c
    sodium_generichash_blake2.c
    sodium_generichash_blake2b.c
    sodium_hash_sha512.c
    sodium_hash_sha512_cp.c
    sodium_onetimeauth_poly1305.c
    sodium_poly1305-sse2.c
    sodium_poly1305_donna.c
    sodium_randombytes.c
    sodium_randombytes_salsa20_random.c
    sodium_randombytes_sysrandom.c
    sodium_ref10_ed25519.c
    sodium_ref10_keypair.c
    sodium_ref10_open.c
    sodium_ref10_scalarmult_ed25519_ref10.c
    sodium_ref10_sign.c
    sodium_ref10_x25519.c
    sodium_runtime.c
    sodium_salsa20-ref.c
    sodium_salsa20-xmm6.c
    sodium_sandy2x_curve25519.c
    sodium_sandy2x_fe51_invert.c
    sodium_sandy2x_fe_frombytes.c
    sodium_scalarmult_curve25519.c
    sodium_secretbox_xchacha20poly1305.c
    sodium_secretbox_xsalsa20poly1305.c
    sodium_sign_ed25519.c
    sodium_stream_chacha20.c
    sodium_stream_salsa20.c
    sodium_stream_xchacha20.c
    sodium_stream_xsalsa20.c
    sodium_utils.c
    sodium_verify.c
    sodium_version.c
    sodium_xmm6int_salsa20-avx2.c
    sodium_xmm6int_salsa20-sse2.c
)

target_include_directories(Yojimbo_SodiumBuiltin PUBLIC .)
